<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_post_view"
            android:paddingTop="10dp"
            android:layout_marginLeft="18dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/ll_name"
                android:paddingTop="@dimen/padding_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:paddingLeft="@dimen/padding_left"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_name"/>
                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/padding_top">
                <TextView
                    android:paddingLeft="@dimen/padding_left"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"/>
                <TextView
                    android:id="@+id/tv_relate_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:paddingTop="@dimen/padding_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:paddingLeft="@dimen/padding_left"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate"/>
                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:paddingTop="@dimen/padding_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:paddingLeft="@dimen/padding_left"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/run_time"/>
                <TextView
                    android:id="@+id/tv_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:paddingTop="@dimen/padding_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <Button
                android:id="@+id/mark_btn"
                android:layout_marginLeft="@dimen/padding_left"
                android:background="@color/colorAccent"
                android:layout_width="60dp"
                android:layout_height="35dp"
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:paddingTop="@dimen/padding_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:text="@string/juqing"/>
        <TextView
            android:paddingTop="5dp"
            android:id="@+id/tv_overView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:background="#cccccc" />
        <TextView
            android:paddingTop="@dimen/padding_top"
            android:paddingLeft="@dimen/layout_margin_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TRAILERS"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>